# Page-Analyzer

./: .env.sample  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: linter.yml
page_analyzer/: __init__.py  app.py  database_helper.py  html_parser.py  url.py  validator.py
page_analyzer/templates/: base.html  index.html  search.html  url.html  url_info.html  urls.html  urls_list.html
